# web-diff-notifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/: config.py  diff_detector.py  main.py  notifier.py  scraper.py
tests/unit/: test_config.py  test_diff_detector.py  test_notifier.py  test_scraper.py
