[tool.poetry]
name = "web-diff-notifier"
version = "0.1.0"
description = "Web scraping and diff detection application"
authors = ["Your Name <your@email.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pylint = "^2.17.2"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
